--- a/JavaNov4.css
+++ b/JavaNov4.css
@@ -30,9 +30,12 @@ width: 900px;
 h4 {
 border: 3px solid black;
 background-color: #CCFB5D;
-margin-left: 230px;
+margin-left: 250px;
+margin-top:-10px;
 color: black;
-width: 605px;
+width: 585px;
+height: 20px;
+text-align:center;
 }
 
 #fall{
